public/css/style.css
:root {
    --pl-svg: url('../img/Flag_of_Poland.svg'); /* Replace with your Polish flag image */
    --uk-svg: url('../img/Flag_of_the_United_Kingdom.svg'); /* Replace with your UK flag image */
    --primary-color: #007f4e;
    --primary-color-theme-slider: #000000;
    --secondary-color: #72b043;
    --secondary-color-theme-slider: #808080;
    --thrird-color: #000;
    --text-color: #000;
    --hover-color: #ed008c;
    --font-size-p:  1.425rem;
    --font-size-h1: 1.65rem;
    --font-size-h2: 1.6rem;
    --font-size-h3: 1.55rem;
    --font-size-h4: 1.5rem;
    --font-size-h5: 1.45rem;
    --font-size-h6: 1.425rem;
}

:root[data-font-size="small"] {
    --font-size-p:  1.275rem;
    --font-size-h1: 1.5rem;
    --font-size-h2: 1.45rem;
    --font-size-h3: 1.4rem;
    --font-size-h4: 1.35rem;
    --font-size-h5: 1.3rem;
    --font-size-h6: 1.275rem;
}

:root[data-font-size="large"] {
    --font-size-p:  1.575rem;
    --font-size-h1: 1.7rem;
    --font-size-h2: 1.675rem;
    --font-size-h3: 1.65rem;
    --font-size-h4: 1.625rem;
    --font-size-h5: 1.6rem;
    --font-size-h6: 1.575rem;
}

:root[data-theme="dark"] {
    --primary-color: #000000;
    --primary-color-theme-slider: #007f4e;
    --secondary-color: #404040;
    --secondary-color-theme-slider: #72b043;
    --thrird-color: #818181;
    --text-color: #ffffff;
    --hover-color: #ed008c;
}

@keyframes activeGradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 0%;
  }
  100% {
    background-position: 0% 50%;
  }
}

html {
    font-family: 'Courier New', Courier, monospace;
}

a, h1, h2, p {
    color: var(--text-color);
}

a {
  text-decoration: none;
}

h1 {
    font-size: var(--font-size-h1);
}

h2 {
    font-size: var(--font-size-h2);
}

p {
    font-size: var(--font-size-p);
    margin-block: 0;
}

a:hover {
    color: var(--hover-color);
    font-weight: bold;
    
}

line {
  color: var(--text-color) 
}

body {
  display: grid;
  align-content: space-evenly;
  height: 98vh;
  animation: activeGradient 15s infinite alternate;
  background: radial-gradient(circle, var(--primary-color),  var(--secondary-color));
  background-size: 400% 400%;
}

header {
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    justify-content: space-between;
    position: fixed;
    width: 98%;
    right: 1%;
}

header h1 {
    margin-top: 1.5rem;
    color: var(--text-color);
}

main {
    text-align: center;
    justify-content: center;
}

main a {
  text-decoration: none;
  margin: 0.5rem 0 0.5rem 0;
}

.main-page-links {
    margin-top: 1rem;
    display: grid;
    justify-items: stretch;
    justify-content: space-evenly;
}

.switch {
  position: relative;
  display: inline-block;
  width: 4rem;
  height: 2rem;
}

.switch input { 
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  -webkit-transition: .4s;
  transition: .4s;
    border: solid var(--thrird-color) 0.05rem;
}

.lang-switch .switch .slider {
  background-image: var(--uk-svg);
  background-position: center;
  background-size: auto 2rem;
}

.theme-switch .switch .slider {
  background-image: radial-gradient(circle, var(--primary-color), var(--secondary-color));
  background-position: center;
  background-size: auto 2rem;
}

.slider:before {
  position: absolute;
  content: "";
  height: 1.5rem;
  width: 1.5rem;
  top: 0.125rem;
  left: 0.1rem;
  -webkit-transition: 0.5s;
  transition: 0.5s;
  border: solid var(--thrird-color) 0.1rem;
}

.lang-switch .switch .slider::before {
  background-image: var(--pl-svg);
  background-position: center;
  background-size: auto 2rem;
}

.theme-switch .switch .slider::before {
  background-image: radial-gradient(circle, var(--primary-color-theme-slider), var(--secondary-color-theme-slider));
  background-position: center;
  background-size: auto 2rem;
}

input:checked + .slider {
  transition: 0.5s;
}

.lang-switch .switch input:checked + .slider {
  background-image: var(--pl-svg);
  background-position: center;
  background-size: auto 4rem;
}

input:checked + .slider:before {
  --slider-transform: 2rem;
  -webkit-transform: translateX(var(--slider-transform));
  -ms-transform: translateX(var(--slider-transform));
  transform: translateX(var(--slider-transform));
}

.lang-switch .switch input:checked + .slider:before {
  background-image: var(--uk-svg);
  background-position: center;
  background-size: auto 1.75rem;
}

/* Rounded sliders */
.slider.round {
  border-radius: 1rem;
}

.slider.round:before {
  border-radius: 50%;
}

footer {
  display: grid;
  grid-auto-flow: column;
  justify-content: space-between;
  position: fixed;
  color: var(--text-color);
  width: 99%;
  margin: 2.5rem 0 0.5rem 0;
  bottom: 0;
}

footer .font-settings, footer .page-width-settings {
  display: flex;
  gap: 0.5rem;
  align-items: center;
}

label.boxed {
  text-align: center;
  display: inline-block;
  font-weight: bold;
  min-width: 1rem;
  padding: 0.5rem;
  border: solid var(--thrird-color) 0.3rem;
  border-radius: 0.5rem;
  animation: 0.5s ease-in-out 0s 1 hoverEffect;
  margin-inline-end: 2.5rem;
  margin-inline-start: 2.5rem;
}

label.boxed:hover {
  background-color: var(--hover-color);
  color: var(--text-color);
  animation: 0.5s ease-in-out 0s 1 hoverEffect;
}

/* Add a border on hover if picked*/
.boxed input[type="radio"]:checked + label {
  border: solid var(--hover-color) 0.3rem;
  background-color: none;
}

.boxed input[type="radio"] {
  display: none;
}

@media only screen and (max-width: 768px) {
  footer {
    justify-content: center;
  }
  footer .page-width-settings {
    display: none;
  }

}

